Do not use Java11 String/List methods